fix horizontal shift by always reserving scrollbar space

--- a/assets/_default.scss
+++ b/assets/_default.scss
@@ -17,6 +17,7 @@ body {
 	font-size: 20px;
 	line-height: 160%;
     font-display: swap;
+    overflow-y: scroll;
 }
 
 .outer {
